# ICCV23_Challenge_LI

./: CMakeLists.txt  README.md  package.xml
config/: SubT_MRS_Final_Challenge_UGV1.yaml  SubT_MRS_Final_Challenge_UGV2.yaml  SubT_MRS_Laurel_Caverns_Handheld3.yaml  TartanAir_lidar_ocean_noise0.yaml
include/: dataHandler.h  utility.h
launch/: run_ugv1.launch
src/: dataHandler.cpp  main.cpp
