<?xml version="1.0"?>
<package>
  <name>iccv23_li</name>
  <version>1.0.1</version>

  <description>
    ICCV23_Challenge_LiI
  </description>

  <maintainer email="mgkim@mobiltech.io">mgkim</maintainer>

  <license>TODO</license>

  <author email="mgkim@mobiltech.io">mgkim</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>Boost</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>Boost</run_depend>

</package>
